fixed contacts section in index and icon alignment

--- a/Flask/static/css/index.css
+++ b/Flask/static/css/index.css
@@ -201,8 +201,11 @@ footer .glyphicon {
 
 h6 {
   text-align: center;
+  font-size: 18px;
+  color: black;
 }
 
 #social {
   text-align: center;
+  margin-right: 30px;
 }
